# S.IO

./: .coverage  .coverage.JGR.lan.42147.XzGvghqx  .env  .env.template  .gitignore  BIAS_DETECTION_SUMMARY.md  DIRECTORY_STRUCTURE.md  Dockerfile  FINAL_SETUP_GUIDE.md  IMPROVEMENT_PLAN.md  INTELLIGENT_YGGDRASIL_GUIDE.md  PROJECT_STATUS.md  README.md  README_CONSOLIDATED.md  YGGDRASIL_GUIDE.md  alembic.ini  database.schema.md  delete_files.md  docker-compose.yml  docker-setup.sh  plan.md  project.overview  project.overview.md  pyproject.toml  pytest.ini  rag_blueprint.md  requirements.txt  run_tests.py  setup_local_models.py  test_deployment.py  test_imports.py  test_python312_compatibility.py  test_scraping.py  validate_fixes.py  verify_integrity.py  yggdrasil_enhanced_schema.sql  yggdrasil_mcp_client.py  yggdrasil_mcp_server.py
READMEfiles/: Tsummary1.md  examples.md  plan.md  scrape_examples.md
alembic/versions/: analysis_tables_schema.py  e1847fb660ca_create_documents_table_and_enable_.py
archive/migration_scripts/: MIGRATION_COMPLETE.md  rename_to_yggdrasil_COMPLETED.py
archive/yggdrasil_archive_20250622_185340/: COMPLETE_FOREST_STRUCTURE.md  README.md  cleanup_legacy.py  convert_to_database_schema.py  create_astrology_tree.py  forest_manager.py  forest_structure_guide.md  master_tree_structure.json  migrate_to_database.py  migrate_to_forest_structure.py  show_astrology_structure.py  show_structure.py  update_master_structure.py
config/: requirements.txt
config/alembic/: env.py
deployment/docker/: .env  Dockerfile  docker-compose.yml  docker-setup.sh  docker_test.py
docs/: PYTHON312_UPGRADE_GUIDE.md
docs/guides/: AGENTS_INTEGRATION_SUMMARY.md  MCP_AGENTS_GUIDE.md  WEBSCRAPING_GUIDE.md
examples/: scraping_config.json
logs/: coverage.json  latest_test_report.json
mcp/server/: yggdrasil_mcp_server.py
models/: storage_classifier.joblib
schema/: README.md  initial_migration.sql  models.py  schema.sql
scripts/: create_shortcuts.sh  navigate.py  test_summary.py
solomon/: __init__.py  cli.py  config.py
solomon/agents/: __init__.py  base.py  doctrine_analysis.py  fallacy_detection.py  orchestrator.py  text_sourcing.py  theme_recognition.py  translation_tracking.py
solomon/api/: main.py
solomon/database/: __init__.py  connection.py  hybrid.md  models.py  populate_categories.py  postgres.md  qdrant.md  qdrant_manager.py
solomon/scraping/: __init__.py  base_scraper.py  (+3 more)
subfields.json/: astrology.json  contemporary.json  data_processing.json  math.json  neuroscience.json  philosophy.json  religion.json
tests/: README.md  conftest.py  quick_agent_test.py  test_agents_mock.py  test_bias_detection.py  test_bias_standalone.py  test_config.py  test_config_unit.py  test_integration.py  test_intelligent_yggdrasil.py  test_mcp_agents.py  test_utils_unit.py  test_yggdrasil_system.py
tools/: tools.py
yggdrasil/: __init__.py  cli.py  config.py
(+223 files in other folders)
