[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solomon-sophia"
version = "0.1.0"
description = "AI-powered analysis of spiritual and religious texts to uncover universal truths"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Solomon Project Team"},
]
keywords = ["ai", "nlp", "spiritual-texts", "rag", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    
    # Vector Database & Embeddings
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    
    # LangChain Ecosystem (Local Models)
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.0.1",
    "langchain-qdrant>=0.0.1",
    "langgraph>=0.0.20",
    
    # ML & NLP (Local Models)
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.24.0",  # For faster HF model loading
    "tensorflow>=2.15.0",  # TensorFlow support
    "spacy>=3.7.0",
    "nltk>=3.8.1",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    
    # Web Scraping & HTTP
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.6",
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

gpu = [
    "torch[cuda]>=2.1.0",
    "faiss-gpu>=1.7.4",
]

optional-tensorflow = []

[project.scripts]
solomon = "solomon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["solomon"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=solomon --cov-report=term-missing"
